# Locanote

./: .env.example  .gitignore  .nvmrc  .prettierignore  AGENTS.md  CONTRIBUTING.md  DEPLOYMENT.md  LEARNING.md  README.md  REVISIT_LOG.md  UI_STYLE_GUIDE.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json  update_settings.py
.github/workflows/: deploy-production.yml  deploy.yml
apps/desktop/: .gitignore  README.md  build.sh  create-icns.py  create-ico.py  generate-icons.py  generate-icons.sh  package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: main.rs
apps/web/: package.json  playwright.config.ts  svelte.config.js  tsconfig.json  vite.config.ts
apps/web/.svelte-kit/: ambient.d.ts  non-ambient.d.ts  tsconfig.json
apps/web/.svelte-kit/output/client/: service-worker.js
apps/web/.svelte-kit/output/server/: index.js  manifest-full.js
apps/web/.svelte-kit/types/: route_meta_data.json
apps/web/e2e/: collaboration.spec.ts  comprehensive-test.spec.ts  comprehensive.spec.ts  export.spec.ts  password-protection.spec.ts  search.spec.ts  share-functionality.spec.ts  templates.spec.ts  theme-visuals.spec.ts  toolbar-h1-test.spec.ts  ui-deep-scan.spec.ts
apps/web/src/: app.css  app.d.ts  app.html  service-worker.js
apps/web/src/lib/: index.ts
apps/web/src/lib/auth/: challenge.ts  index.ts  passkey-strategy.ts  password-login.svelte.ts  password-strategy.ts  password.svelte.ts  (+4 more)
apps/web/src/routes/: +layout.svelte  +page.svelte
apps/web/static/: manifest.json
(+111 files in other folders)
