[package]
name = "locanote-desktop"
version = "0.1.0"
description = "Locanote - A simple note-taking app"
authors = ["Bandi Akarsh"]
license = "MIT"
repository = "https://github.com/BandiAkarsh/Locanote"
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open", "system-tray", "updater"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
